@@ -12,6 +12,9 @@
 
 ngIRCd 0.7-CVS
 
+  - The info text ("real name") of users is set to "-" if none has been
+    specified using the USER command (e. g. "USER user * * :"). Reason:
+    the original ircd doesn't like empty ones and would KILL such users.
   - Fixed (optional) TCP Wrapper test which was broken and could result in
     false results. Thanks to Fuminori Tanizaki <tany@mcnet.ad.jp>!
   - Removed "USE_" prefixes of configuration #defines.
@@ -490,4 +493,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.188.2.22 2004/02/03 16:01:29 alex Exp $
+$Id: ChangeLog,v 1.188.2.23 2004/02/04 20:04:54 alex Exp $
